	PR c++/71024 	* c-common.c (diagnose_mismatched_attributes): New function. 	* c-common.h (diagnose_mismatched_attributes): Declare.

* c-decl.c (diagnose_mismatched_decls): Factor out code to
	diagnose_mismatched_attributes and call it.

	* decl.c (duplicate_decls): Call diagnose_mismatched_decls.

	* c-c++-common/attributes-3.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@236129 138bc75d-0d04-0410-961f-82ee72b054a4